--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tato30/vue-pdf": "^1.7.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
